--- a/server/src/services/emails/email.hbs
+++ b/server/src/services/emails/email.hbs
@@ -5,6 +5,7 @@
         .link-button {
             text-decoration: none;
             padding: 25px 100px 25px 100px;
+            height: 200px;
             background-color: aqua;
             color: blueviolet;
             cursor: pointer;
