--- a/client/src/components/molecules/deprecated/user-box-sender/user-box-sender.css
+++ b/client/src/components/molecules/deprecated/user-box-sender/user-box-sender.css
@@ -11,26 +11,26 @@
     border: 1px solid blue;
 }
 
-@media (max-width: 767px) {
-    .complete-user-box {}
-
-    .complete-user-box__text {}
-
-    .complete-user-box__button {}
-}
-
-@media (min-width: 768px) {
-    .complete-user-box {}
-
-    .complete-user-box__text {}
-
-    .complete-user-box__button {}
-}
-
-@media (min-width: 1200px) {
+@media screen and (min-width: 1200px) {
     .complete-user-box {
         width: 70%;
     }
+
+    .complete-user-box__text {}
+
+    .complete-user-box__button {}
+}
+
+@media screen and (max-width: 1199px) and (min-width: 768px) {
+    .complete-user-box {}
+
+    .complete-user-box__text {}
+
+    .complete-user-box__button {}
+}
+
+@media screen and (max-width: 767px) {
+    .complete-user-box {}
 
     .complete-user-box__text {}
 
