--- a/client/src/styles/variables.css
+++ b/client/src/styles/variables.css
@@ -2,6 +2,8 @@
     --font-family-main: 'OpenSans', 'Arial', 'sans-serif';
     --font-family-bold: 'OpenSans-Bold', 'Arial', 'sans-serif';
     --font-size-main: 30px;
-    --black: #000000;
     --color-button-text: #000000;
+    --black: #000000;
+    --color-error-text: #FF0000;
+    --font-size-error: 25px;
 }
