--- a/client/src/components/molecules/success-modal/success-modal.css
+++ b/client/src/components/molecules/success-modal/success-modal.css
@@ -3,10 +3,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    border: 1px solid red;
+    border: 1px solid grey;
     width: 900px;
     min-height: 150px;
     padding: 20px 0;
+    border-radius: 15px;
 }
 
 .success-modal__text {
