--- a/client/src/styles/keyframes.css
+++ b/client/src/styles/keyframes.css
@@ -1,9 +1,10 @@
-@keyframes circleFull {
+@keyframes circleLoadingAnimation {
     from {
+        opacity: 0;
         transform: rotate3d(0, 0, 1, -180deg);
     }
-
     to {
+        opacity: 1;
         transform: rotate3d(0, 0, 1, 180deg);
     }
 }
