--- a/client/src/components/atoms/button/button.css
+++ b/client/src/components/atoms/button/button.css
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     width: 300px;
-    height: 70px;
+    min-height: 70px;
     transition: .2s;
     outline: none;
 }
