--- a/client/src/components/molecules/user-form/user-form.css
+++ b/client/src/components/molecules/user-form/user-form.css
@@ -1,11 +1,12 @@
-.user-form-wrapper{
+.user-form-wrapper {
     border-radius: 20px;
-    border: 1px solid green;
-    width: 800px;
-    min-height: 650px;
+    border: 1px solid grey;
+    width: 85vw;
+    max-width: 750px;
+    min-height: 600px;
 }
 
-.user-form-wrapper--loading{
+.user-form-wrapper--loading {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -23,7 +24,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 40px 40px;
+    padding: 30px 40px;
 }
 
 .user-form__row--button {
@@ -65,33 +66,36 @@
     color: var(--color-error-text)
 }
 
-@media screen and (max-width: 1199px) and (min-width: 768px) {
-    .user-form-wrapper {
-        width: 90%;
-    }
-}
-
 @media screen and (max-width: 767px) {
     .user-form-wrapper {
         width: 95%;
+        max-height: 95vh;
+        max-width: 460px;
     }
+
     .user-form__row:first-child {
-        padding: 40px 40px;
+        padding: 20px 40px 10px 40px;
+        height: 63px;
     }
+
     .user-form__row {
         padding: 20px 20px;
     }
+
     .user-form__field-block {
         padding-top: 10px;
         flex-direction: column;
     }
+
     .user-form__error {
         height: 30px;
         justify-content: center;
     }
+
     .user-form__text-field {
         order: 1;
     }
+
     .user-form__label {
         order: 2;
         display: flex;
