--- a/client/src/components/atoms/loader/loader.css
+++ b/client/src/components/atoms/loader/loader.css
@@ -1,3 +1,6 @@
 .loader {
+    height: 150px;
+    width: 150px;
+    /* border: 1px solid red; */
     animation: circleLoadingAnimation 2s linear infinite;
 }
