--- a/client/src/components/molecules/user-form/user-form.css
+++ b/client/src/components/molecules/user-form/user-form.css
@@ -1,4 +1,5 @@
 .user-form-wrapper {
+    /* display: flex; */
     border-radius: 20px;
     border: 1px solid grey;
     width: 85vw;
@@ -58,12 +59,6 @@
 .user-form__error {
     height: 30px;
     display: flex;
-}
-
-.user-form__error-text {
-    text-align: center;
-    font-size: var(--font-size-error);
-    color: var(--color-error-text)
 }
 
 @media screen and (max-width: 767px) {
